src/objects/CQ_Fieldmapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_to_Map__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field to Map</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCQ_toQuoteReporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCQ_toQuoteReporting</label>
        <type>Checkbox</type>
    </fields>
    <label>CQ Fieldmapping</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>IsCQ_toQuoteReporting__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
</CustomObject>